# CoACD-rs

./: Cargo.toml  LICENSE-MIT  README.md
assets/: square_ring.glb
examples/: clip_mesh.rs  decomposition.rs
src/: clip.rs  cost.rs  hashable_partial_eq.rs  hausdorff.rs  lib.rs  math.rs  mcts.rs  mesh.rs  parameters.rs  pca.rs
src/collections/: hash_map.rs  hash_set.rs  mod.rs
src/point_cloud/: mod.rs  normalize.rs  pca.rs
