[package]
name = "coacd"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30", features = ["approx"] }
spade = "2.15"
# For glam 0.30
obvhs = { git = "https://github.com/diquah/obvhs" }
hashbrown = "0.16"
foldhash = "0.2"
rand = "0.9"
kiddo = "5.2"

[dev-dependencies]
# For test scenes and rendering
bevy = { version = "0.17" }
